--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,17 @@ out/
 .idea/copilot
 .idea/copilot/*
 
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
 ### Eclipse ###
 .apt_generated
 .classpath
