--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.SM</groupId>
-    <artifactId>Suunnittelumallit</artifactId>
+    <artifactId>SuunnittelumallitParent</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>AbstractFactory</module>
+        <module>Tilebase</module>
+        <module>OtherSubproject</module>
+        <module>Observer</module>
+    </modules>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
     </properties>
+
+
 
     <dependencies>
 
@@ -28,6 +38,8 @@
         </dependency>
         
     </dependencies>
+
+
 
     <build>
         <plugins>
