--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>Tilebase</module>
         <module>OtherSubproject</module>
         <module>Observer</module>
+        <module>Singleton</module>
     </modules>
 
     <properties>
