--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>OtherSubproject</module>
         <module>Observer</module>
         <module>Singleton</module>
+        <module>Template</module>
     </modules>
 
     <properties>
