--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>Template</module>
         <module>Decorator</module>
         <module>State</module>
+        <module>Strategy</module>
     </modules>
 
     <properties>
